<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ps_avatar_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="centerCrop"
                android:src="@drawable/im_svs_pic"
                app:riv_oval="true"
                app:riv_border_width="2dp"
                app:riv_border_color="@color/colorPrimaryDark"
                app:riv_corner_radius="10dp"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginTop="5dp"
                  android:text="@string/snehal_sutar"
                  android:textColor="@android:color/white"
                  android:textSize="24sp"
                  android:textStyle="bold"
                  android:layout_marginBottom="10dp"
                  android:layout_gravity="center"/>
        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/primaryLightColor"
              android:alpha="0.3"
              android:layout_marginLeft="@dimen/margin_for_separator"
              android:layout_marginRight="@dimen/margin_for_separator"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:textColor="@android:color/white"
                  android:layout_margin="10dp"
                  android:gravity="center"
                  android:textSize="18sp"
                  android:text="Education"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:layout_margin="10dp"
                  android:textColor="@android:color/white"
                  android:gravity="center"
                  android:textSize="12sp"
                  android:text="@string/masters_in_computer_science"/>

        <View android:layout_width="match_parent" android:layout_height="1dp"
              android:background="@color/primaryLightColor"
              android:alpha="0.3"
              android:layout_marginLeft="@dimen/margin_for_separator"
              android:layout_marginRight="@dimen/margin_for_separator"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:textColor="@android:color/white"
                  android:gravity="center"
                  android:layout_margin="10dp"
                  android:textSize="18sp"
                  android:text="Work Experience"/>
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="10dp"
                  android:textColor="@android:color/white"
                  android:layout_margin="10dp"
                  android:gravity="center"
                  android:textSize="12sp"
                  android:text="@string/work_experience_details"/>


    </LinearLayout>

</ScrollView>